# circlebe/src/dto/auth.dto.ts
@@ -1,9 +1,9 @@
 export type RegisterDTO = {
     fullname: string,
     email: string,
+    username: string
     password: string,
     image: string,
-    username: string
 }
 
 export type LoginDTO = {
