# circlebe/src/utils/schemas/user.schema.ts
@@ -4,6 +4,7 @@ import { CreateUserDTO } from "../../dto/user.dto";
 
 export const createUserSchema = Joi.object<CreateUserDTO>({
     fullname : Joi.string().min(3).max(100).required(),
+    username : Joi.string().min(3).max(100).required(),
     email: Joi.string().email(),
     password: Joi.string().min(4),
 })
